testdata/baselines/reference/submodule/conformance/chainedPrototypeAssignment.errors.txt
use.js(2,19): error TS7016: Could not find a declaration file for module './mod'. 'mod.js' implicitly has an 'any' type.


==== use.js (1 errors) ====
    /// <reference path='./types.d.ts'/>
    var mod = require('./mod');
                      ~~~~~~~
!!! error TS7016: Could not find a declaration file for module './mod'. 'mod.js' implicitly has an 'any' type.
    var a = new mod.A()
    var b = new mod.B()
    a.m('nope')
    b.m('not really')
    
==== types.d.ts (0 errors) ====
    declare function require(name: string): any;
    declare var exports: any;
==== mod.js (0 errors) ====
    /// <reference path='./types.d.ts'/>
    var A = function A() {
        this.a = 1
    }
    var B = function B() {
        this.b = 2
    }
    exports.A = A
    exports.B = B
    A.prototype = B.prototype = {
        /** @param {number} n */
        m(n) {
            return n + 1
        }
    }
    